--- a/admin-employees.html
+++ b/admin-employees.html
@@ -180,7 +180,7 @@
                                             <td class="border-0 align-middle">annguyen@gmail.com</td>
                                             <td class="border-0 align-middle">0983334212</td>
                                             <td class="border-0 align-middle">Hoàng Mai, Hà Nội</td>
-                                            <td class="border-0 align-middle text-success">Đang hoạt động</td>
+                                            <td class="border-0 align-middle text-success admin-status">Đang hoạt động</td>
                                         </tr>
                                         <tr class="border-bottom item">
                                             <td class="border-0 align-middle">
@@ -197,7 +197,7 @@
                                             <td class="border-0 align-middle">duongnguyen@gmail.com</td>
                                             <td class="border-0 align-middle">0987654321</td>
                                             <td class="border-0 align-middle">Hoàng Mai, Hà Nội</td>
-                                            <td class="border-0 align-middle text-success">Đang hoạt động</td>
+                                            <td class="border-0 align-middle text-success admin-status">Đang hoạt động</td>
                                         </tr>
                                         <tr class="border-bottom item">
                                             <td class="border-0 align-middle">
@@ -214,7 +214,7 @@
                                             <td class="border-0 align-middle">annguyen@gmail.com</td>
                                             <td class="border-0 align-middle">0983334211</td>
                                             <td class="border-0 align-middle">Đông Anh, Hà Nội</td>
-                                            <td class="border-0 align-middle text-success">Đang hoạt động</td>
+                                            <td class="border-0 align-middle text-success admin-status">Đang hoạt động</td>
                                         </tr>
                                         <tr class="border-bottom item">
                                             <td class="border-0 align-middle">
@@ -231,7 +231,7 @@
                                             <td class="border-0 align-middle">longtran@gmail.com</td>
                                             <td class="border-0 align-middle">0983334210</td>
                                             <td class="border-0 align-middle">Hoàng Mai, Hà Nội</td>
-                                            <td class="border-0 align-middle text-danger">Ngừng hoạt động</td>
+                                            <td class="border-0 align-middle text-danger admin-status">Ngừng hoạt động</td>
                                         </tr>
                                         <tr class="border-bottom item">
                                             <td class="border-0 align-middle">
@@ -248,7 +248,7 @@
                                             <td class="border-0 align-middle">lucasdo@gmail.com</td>
                                             <td class="border-0 align-middle">0983134212</td>
                                             <td class="border-0 align-middle">Hoàng Mai, Hà Nội</td>
-                                            <td class="border-0 align-middle text-success">Đang hoạt động</td>
+                                            <td class="border-0 align-middle text-success admin-status">Đang hoạt động</td>
                                         </tr>
                                         <tr class="border-bottom item">
                                             <td class="border-0 align-middle">
@@ -265,7 +265,7 @@
                                             <td class="border-0 align-middle">bachduong@gmail.com</td>
                                             <td class="border-0 align-middle">083334212</td>
                                             <td class="border-0 align-middle">Hoàng Mai, Hà Nội</td>
-                                            <td class="border-0 align-middle text-success">Đang hoạt động</td>
+                                            <td class="border-0 align-middle text-success admin-status">Đang hoạt động</td>
                                         </tr>
                                         <tr class="border-bottom item">
                                             <td class="border-0 align-middle">
@@ -282,7 +282,7 @@
                                             <td class="border-0 align-middle">Nguyenthi@gmail.com</td>
                                             <td class="border-0 align-middle">0983334200</td>
                                             <td class="border-0 align-middle">Hoàng Mai, Hà Nội</td>
-                                            <td class="border-0 align-middle text-success">Đang hoạt động</td>
+                                            <td class="border-0 align-middle text-success admin-status">Đang hoạt động</td>
                                         </tr>
                                     </tbody>
                                 </table>
