--- a/admin-orders.html
+++ b/admin-orders.html
@@ -156,7 +156,7 @@
                                             <td class="border-0 align-middle"><a class="text-dark" href="./admin-order-detail.html">233244</a></td>
                                             <td class="border-0 align-middle">Nguyễn Hà</td>
                                             <td class="border-0 align-middle">12/03/2024</td>
-                                            <td class="border-0 align-middle">Đang giao</td>
+                                            <td class="border-0 align-middle admin-status">Đang giao</td>
                                             <td class="border-0 align-middle">1,090,000đ</td>
                                         </tr>
                                         <tr class="border-bottom item">
@@ -166,7 +166,7 @@
                                             <td class="border-0 align-middle"><a class="text-dark" href="./admin-order-detail.html">122346</a></td>
                                             <td class="border-0 align-middle">My Trần</td>
                                             <td class="border-0 align-middle">12/03/2024</td>
-                                            <td class="border-0 align-middle text-success">Hoàn thành</td>
+                                            <td class="border-0 align-middle text-success admin-status">Hoàn thành</td>
                                             <td class="border-0 align-middle">1,048,500đ</td>
                                         </tr>
                                         <tr class="border-bottom item">
@@ -176,7 +176,7 @@
                                             <td class="border-0 align-middle"><a class="text-dark" href="./admin-order-detail.html">167544</a></td>
                                             <td class="border-0 align-middle">An Nguyễn</td>
                                             <td class="border-0 align-middle">11/03/2024</td>
-                                            <td class="border-0 align-middle text-success">Hoàn thành</td>
+                                            <td class="border-0 align-middle text-success admin-status">Hoàn thành</td>
                                             <td class="border-0 align-middle">990,000đ</td>
                                         </tr>
                                         <tr class="border-bottom item">
@@ -186,7 +186,7 @@
                                             <td class="border-0 align-middle"><a class="text-dark" href="./admin-order-detail.html">334245</a></td>
                                             <td class="border-0 align-middle">Lucas Đô</td>
                                             <td class="border-0 align-middle">11/03/2024</td>
-                                            <td class="border-0 align-middle text-success">Hoàn thành</td>
+                                            <td class="border-0 align-middle text-success admin-status">Hoàn thành</td>
                                             <td class="border-0 align-middle">890,000đ</td>
                                         </tr>
                                         <tr class="border-bottom item">
@@ -196,7 +196,7 @@
                                             <td class="border-0 align-middle"><a class="text-dark" href="./admin-order-detail.html">232455</a></td>
                                             <td class="border-0 align-middle">Long Trần</td>
                                             <td class="border-0 align-middle">11/03/2024</td>
-                                            <td class="border-0 align-middle text-danger">Hoàn trả</td>
+                                            <td class="border-0 align-middle text-danger admin-status">Hoàn trả</td>
                                             <td class="border-0 align-middle">890,000đ</td>
                                         </tr>
                                         <tr class="border-bottom item">
@@ -206,7 +206,7 @@
                                             <td class="border-0 align-middle"><a class="text-dark" href="./admin-order-detail.html">122465</a></td>
                                             <td class="border-0 align-middle">Bạch Dương</td>
                                             <td class="border-0 align-middle">11/03/2024</td>
-                                            <td class="border-0 align-middle text-success">Hoàn thành</td>
+                                            <td class="border-0 align-middle text-success admin-status">Hoàn thành</td>
                                             <td class="border-0 align-middle">690,000đ</td>
                                         </tr>
                                         <tr class="border-bottom item">
@@ -216,7 +216,7 @@
                                             <td class="border-0 align-middle"><a class="text-dark" href="./admin-order-detail.html">334564</a></td>
                                             <td class="border-0 align-middle">Nguyễn Thi</td>
                                             <td class="border-0 align-middle">10/03/2024</td>
-                                            <td class="border-0 align-middle text-success">Hoàn thành</td>
+                                            <td class="border-0 align-middle text-success admin-status">Hoàn thành</td>
                                             <td class="border-0 align-middle">890,000đ</td>
                                         </tr>
                                     </tbody>
