--- a/admin-index.html
+++ b/admin-index.html
@@ -244,25 +244,25 @@
                                         <th class="font-weight-normal">033445</th>
                                         <td>12/03/2024</td>
                                         <td>1,090,000đ</td>
-                                        <td class="">Đang giao</td>
+                                        <td class="admin-status">Đang giao</td>
                                     </tr>
                                     <tr class="border-bottom">
                                         <th class="font-weight-normal">099334</th>
                                         <td>12/03/2024</td>
                                         <td>1,090,000đ</td>
-                                        <td class="text-success">Hoàn thành</td>
+                                        <td class="text-success admin-status">Hoàn thành</td>
                                     </tr>
                                     <tr class="border-bottom">
                                         <th class="font-weight-normal">033455</th>
                                         <td>10/03/2024</td>
                                         <td>1,990,000đ</td>
-                                        <td class="text-success">Hoàn thành</td>
+                                        <td class="text-success admin-status">Hoàn thành</td>
                                     </tr>
                                     <tr class="">
                                         <th class="font-weight-normal">334545</th>
                                         <td>10/03/2024</td>
                                         <td>590,000đ</td>
-                                        <td class="text-danger">Hoàn trả</td>
+                                        <td class="text-danger admin-status">Hoàn trả</td>
                                     </tr>
                                 </tbody>
                             </table>
