--- a/admin-employee-edit.html
+++ b/admin-employee-edit.html
@@ -127,6 +127,7 @@
                                 <div class="row">
                                     <div class="col-lg-3 col-md-3 text-center my-auto">
                                         <img class="" src="./img/icon/user.png" alt="" style="width: 148px; height: 148px;">
+                                        <span class="d-block border-0 align-middle text-success admin-status">Đang hoạt động</td>
                                     </div>
                                     <div class="col-lg-9 col-md-9">
                                         <div class="row">
