--- a/admin-order-detail.html
+++ b/admin-order-detail.html
@@ -193,7 +193,7 @@
                             </div>
                             <div class="">
                                 <p class="m-0"><strong>Tình trạng đơn hàng</strong></p>
-                                <p class="text-success">Hoàn thành</p>
+                                <p class="text-success admin-status">Hoàn thành</p>
                             </div>
                         </div>
                     </div>
