--- a/admin-employee-edit.html
+++ b/admin-employee-edit.html
@@ -126,7 +126,10 @@
                             <div class="bg-white border p-4">
                                 <div class="row">
                                     <div class="col-lg-3 col-md-3 text-center my-auto">
-                                        <img class="" src="./img/icon/user.png" alt="" style="width: 148px; height: 148px;">
+                                        <!-- <img class="" src="./img/icon/user.png" alt="" style="width: 148px; height: 148px;"> -->
+                                        <div class="d-flex justify-content-center mb-2">
+                                            <div class="circle">D</div>
+                                        </div>
                                         <span class="d-block border-0 align-middle text-success admin-status">Đang hoạt động</td>
                                     </div>
                                     <div class="col-lg-9 col-md-9">
